--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
-spring.datasource.url= jdbc:mysql://snpublicschool-db.ckxjalxpgzsx.us-east-2.rds.amazonaws.com:3306/snpublicschool_contact
-spring.datasource.username=snpublicschool
-spring.datasource.password=snpublicschool
+spring.datasource.url= jdbc:mysql://monorail.proxy.rlwy.net:37189/snpublicschool/railway
+spring.datasource.username=root
+spring.datasource.password=b2-CfFBcfdab6A31264DAfcCH4eeGfA-
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
