--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.servlet.multipart.max-request-size=10MB
 logging.level.org.springframework.security=DEBUG
 server.error.include-message=always
 
-spring.profiles.active=dev
+spring.profiles.active=${ENV:dev}
