--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://monorail.proxy.rlwy.net:37189/snpublicschool/railway
+spring.datasource.url= jdbc:mysql://monorail.proxy.rlwy.net:37189/railway
 spring.datasource.username=root
 spring.datasource.password=b2-CfFBcfdab6A31264DAfcCH4eeGfA-
 
